Update examples & fix certificate generation entrypoint"

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # HTTP Basic Auth configuration
-# Generate with: htpasswd -c .htpasswd username
-NGINX_HTPASSWD=
+# Generate with: htpasswd -c .htpasswd username - for multiple users paste the entire .htpasswd file here in single quotes with multiple lines
+NGINX_HTPASSWD='username:$apr1$randomsalt$hashedpassword
+user2:$apr1$randomsalt$hashedpassword
+user3:$apr1$randomsalt$hashedpassword'
 
 # HTTPS configuration (optional)
 # Set to true to enable HTTPS with Let's Encrypt
